Revert " Fix member-modal styl, no need about in modal view; it can be too long."
This reverts commit 3a64ffa2cddeb4be80909e92cb10a8231f2dc79c.

Conflicts:

	client/stylus/app.members.styl

--- a/client/stylus/app.members.styl
+++ b/client/stylus/app.members.styl
@@ -117,7 +117,7 @@ app.members.styl
 
   .member-item
     border-bottom        1px solid rgba(0, 0, 0, 0.075)
-    padding              14px 8px 8px 14px
+    padding              24px 20px 27px 20px
     margin-bottom        0
     borderBox()
     > span
@@ -162,9 +162,7 @@ app.members.styl
       footer
         color           #a5a5a5
         button
-          right         14px
-          bottom        12px
-          fr()
+          margin-right  30px
         a.following
         a.followers
           color             #7F7F7F
@@ -172,6 +170,7 @@ app.members.styl
           font-size         11px
           letter-spacing    -1px
           line-height       11px
+          margin            0 30px 0 0
           padding           5px 0px
           cite
             width             18px
